Changelog
=========

1.1.7 - unreleased
------------------

- Fixed untranslatable content types in @@manage-content-rules. This closes
  http://dev.plone.org/plone/ticket/9778
  [vincenfretin]

- Fixed some duplicated msgids with different defaults.
  There is no new strings to translate.
  See http://dev.plone.org/plone/ticket/9633
  [vincenfretin]


1.1.6 - May 16, 2009
--------------------

- Add check to see if getTypeInfo can be None (which is a valid value)
  [tesdal]

- Changed the simplepublish test to use a copy instead of a move action.
  The move action causes the content item to be moved away while editing
  it and causes a NotFound error. In Plone 3 this is hidden by the
  customized NotFound handling.
  [hannosch]

- Fixed GenericSetup tests layer to not pollute the general test
  environment.
  [hannosch]

- Modified a macro call in contentrules-pageform.pt for forwards
  compatibility with Zope 2.12.
  [davisagli]

- Fixed a SyntaxError in test_configuration.
  [hannosch]


1.1.1 - April 18, 2008
----------------------

- Added proper unicode handling to mail action. This closes
  http://dev.plone.org/plone/ticket/7650.
  [hannosch]

- Made the GS import handlers more tolerant in case the storage utility
  is missing. This closes http://dev.plone.org/plone/ticket/8133.
  [hannosch]

- Changed wording on the IMailAction interface to remove a reference to a
  newly created item, since the action can be used on existing content
  as well. This closes http://dev.plone.org/plone/ticket/8225.
  [hannosch]


1.1 - April 20, 2008
--------------------

- Ensure that if a contentrules.xml step is imported twice, conditions and
  actions are not duplicated.
  Fixes http://dev.plone.org/plone/ticket/8027
  [optilude]

- Fix invalid leading space in all 'Up to Site Setup' links.
  [wichert]


1.1.0a1
-------

- Fixed a small bug related to getTypeInfo() being acquired.
  http://dev.plone.org/plone/ticket/7385
  [optilude]
